              with well-defined behaviour for an out-of-range index.
        Class Triangulation<dim>:
            - New suite of routines countBoundaryFaces().
            - New suite of public routines dualBoundaryMap() (these were
              previously private, and had a more complex interface).
            - New suite of routines dualToPrimal().
            - New routine pairing().
        Class Triangulation<4>:
            - New routine intersectionForm().
            - New optimisations that reduce the need for 3-sphere/3-ball
              recognition when modifying a triangulation.
        Class Vector:
            - Routine scaleDown() now returns the gcd that was used.
        Class Vertex<3>:
            - New routine linkingSurface().
        Function for_constexpr():
            - New routine to support compile-time for loops.
        Function tightDecoding():
            - New template function that reconstructs integers and booleans
              from tight encodings.
        Functions tightEncode(), tightEncoding():
            - Added a global function to encode booleans.
        Global constants maxSafeFactor<...> and minSafeFactor<...>:
            - Added to facilitate overflow checking with native integer
              operations.
    PYTHON:
        - For classes that have a bool() cast operator, this is now wrapped in
          Python using the special __bool__() function (i.e., Python will now
          cast such objects to bool in the same way).
    UTILITIES:
        tricensus:
            - Now supports multithreading via the new --threads option.
            - Now supports enumerating subcomplexes of triangulations
              via the new option --allowinvalid.
            - The --genpairs option is now much less memory-hungry when the
              automorphism group is large (e.g., with many boundary facets).

Version 7.0  [ 19 December, 2021 ]

    GENERAL:
        - The file format has changed.  It is still XML-based, but older